    (LP: #594233)
  * Grab focus of the slideshow when it starts, keeping focus off the expander
    in automatic mode.
  * Don't allow progressing past the language page unless a valid language is
    picked.

  [ Colin Watson ]
  * GTK frontend: Make user-setup entry boxes activate the Forward button
    when Enter is pressed.

 -- Evan Dandrea <evand@ubuntu.com>  Mon, 13 Sep 2010 18:14:20 +0100

ubiquity (2.3.17) maverick; urgency=low

  [ Evan Dandrea ]
  * Fetch the translations for the release_notes_only and
    update_installer_only strings (LP: #629627).
  * Don't use the same name for the error method and GTK label
    (LP: #631046).
  * Re-use the valid username check from user-setup in the GTK UI
    (LP: #631046).
  * Do not cut off the text of the Try and Install buttons by setting
    their width to just the largest initial width of the two
    (LP: #629437).
  * Update the panel to use the new location for the panel background,
    and force a redraw when setting it.
  * If the username only contains non-alphanumeric characters, set the
    hostname to ubuntu-{laptop,desktop}.
  * Replace RELEASE with the release name in the KDE UI finished dialog
    (LP: #628964).
  * Do not look for a full path on non-paths when getting the default
    grub target.
  * Fix a crash when there are no disks present on the system
    (LP: #631766).
  * Don't let the user continue if there are no disks present, or if
    there isn't enough free space on any of them to install.
  * Fix UI bugs in the automatic partitioner page.  Better handle
    determining what the desired partitioning recipe is (LP: #630450).
  * Update the KDE partitioning UI to reflect changes to ubi-partman and
    partman-auto.
    - Use the already existent ubiquity variants of the d-i "Guided -" strings
      (LP: #628864).
    - Fix the automatic resize option failing to appear
      (LP: #628897, LP: #628815).
    - Use a combobox to select which disk to use on all options that support